2014-03-31 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.6.0

	* pi4:	added special usage param to ajax request
	* ajax:	new var for special usage get param
			select query depending on get params
	* main:	general code refactoring

2014-03-27 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.6.0

	* ajax:	if no categroy is selected the filename is build without 
			this part
	* pi1:	it is not necessary anymore to give a selected category 
			for the list view
			general refactoring
	* pi4:	added a new field to select the special usage case in the 
			backend flexform
			changed the function to check for affected file records to 
			display the type navigation if a category is given or a 
			special usage case

2014-03-26 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.6.0

	* pi3:	added a new field to select the special usage case in the 
			backend flexform
			the button to the download page is now displayed by the 
			selection in the backend flexform
			introduced a fallback for older implementations to show a 
			Produktmappe if no special usage case is selected
	* pi1:	debugging of missing css inclusion in dlButton view
			included  statements to check if a selected category is 
			given
	* ajax:	included  statements to check if a selected category is 
			given

2013-09-04 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.5.0

	* main:	added a text field to leave a short note which nature 
			the current changes of a document are, shall be used in 
			jhe_whatsnu

2013-08-26 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.4.0

	* pi5:	added new jquery lib listnav for the alphabetical selection 
			of documents in the list and implemented it

2013-08-22 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.3.2

	* main:	deleted reminder text with mysql update statement for 
			migration to live scope

2013-08-22 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.3.1
