@@ -5,7 +5,7 @@ CREATE TABLE tx_dam (
 	tx_jhedamextender_usage int(11) DEFAULT '0' NOT NULL,
 	tx_jhedamextender_lowlevel_selection varchar(255) DEFAULT '' NOT NULL,
 	tx_jhedamextender_path tinytext,
-	tx_jhedamextender_order int(11) DEFAULT '0' NOT NULL,
+	tx_jhedamextender_order int(13) DEFAULT '0' NOT NULL,
 	tx_jhedamextender_doctype text,
 	tx_jhedamextender_note text,
 );
